--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,12 @@
 [workspace]
-members = ["chsi", "chs_lexer", "chs_parser", "chs_vm", "chs_vm_v2"]
+members = [
+    "chsi",
+    "chs_lexer",
+    "chs_parser",
+    "chs_vm",
+    "chs_vm_v2",
+    "type_check",
+]
 resolver = "2"
 
 [profile.release]
