--- a/memory/Cargo.toml
+++ b/memory/Cargo.toml
@@ -1,7 +1,6 @@
 [package]
-name = "chs_vm_v2"
+name = "memory"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-memory = { path = "../memory" }
